--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="str_btn_mainActivity_reset">Reset timer</string>
 
     <string name="str_tv_mainActivity_display">the time will be displayed here!</string>
+    <string name="str_tv_MainActivity_nextButton">test!</string>
 </resources>
