--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,5 @@
     <string name="str_test">test-String!</string>
     <string name="str_btn_SetRoutine_image">set image</string>
     <string name="str_btn_SetRoutine_color">Set Color</string>
-    <string name="str_tv_colordialog_display">0x000000</string>
+    <string name="str_tv_colordialog_display">\t Hue:</string>
 </resources>
