--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,18 +1,16 @@
 <resources>
     <string name="app_name">routineTimer</string>
 
-    <string name="str_btn_mainActivity_start">Start</string>
-
-    <string name="str_btn_mainActivity_stop">Stop</string>
-
-    <string name="str_btn_mainActivity_reset">Reset timer</string>
-
-    <string name="str_tv_mainActivity_display">the time will be displayed here!</string>
-    <string name="str_tv_MainActivity_nextButton">test!</string>
-    <string name="btn_MainActivity_setup">Set up Routine!</string>
-    <string name="str_tv_SetRoutine_name">Name of the checkpoint</string>
     <string name="str_test">test-String!</string>
+
+    <string name="str_btn_MainActivity_setup">Set up Routine!</string>
+    <string name="str_button_MainActivity_test">test!</string>
+
+    <string name="str_tv_SetRoutine_name">Name of the checkpoint</string>
     <string name="str_btn_SetRoutine_image">set image</string>
     <string name="str_btn_SetRoutine_color">Set Color</string>
+    <string name="str_tv_SetRoutine_routineName">Routine name displayed here</string>
+
     <string name="str_tv_colordialog_display">\t Hue:</string>
+    <string name="str_tv_MainActivity_username">Please log in!</string>
 </resources>
