--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,12 +5,19 @@
 
     <string name="str_btn_MainActivity_setup">Set up Routine!</string>
     <string name="str_button_MainActivity_test">test!</string>
+    <string name="str_tv_MainActivity_username">Please log in!</string>
 
     <string name="str_tv_SetRoutine_name">Name of the checkpoint</string>
     <string name="str_btn_SetRoutine_image">set image</string>
     <string name="str_btn_SetRoutine_color">Set Color</string>
     <string name="str_tv_SetRoutine_routineName">Routine name displayed here</string>
 
-    <string name="str_tv_colordialog_display">\t Hue:</string>
-    <string name="str_tv_MainActivity_username">Please log in!</string>
+    <string name="str_actv_SelectRoutine_createRoutine_name">Name</string>
+    <string name="str_tv_SelectRoutine_createRoutine_info">Enter routine name:</string>
+    <string name="str_rb_SelectRoutine_createRoutine_create">Create new routine</string>
+
+
+    <string name="str_tv_SelectRoutine_selectRoutine_info">Select existing routine:</string>
+    <string name="str_dd_SelectRoutine_selectRoutine_dropdown">Select Routine</string>
+    <string name="str_rb_SelectRoutine_selectRoutine_select">Select existing routine</string>
 </resources>
