converted to kotlin
this is the last checkpoint for me before i (try to?) convert every activity to a fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,4 +113,5 @@
     </string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_select_routine">SelectRoutine</string>
+    <string name="str_tv_MainActivity_login">Please log in!</string>
 </resources>
