implemented a list drag-drop view to organize the tiles of a routine

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -129,4 +129,5 @@
     <string name="str_btn_EditRoutine_sequential_cycle_delete">delete tile!</string>
     <string name="str_btn_EditRoutine_sequential_routines_organize">organize routine</string>
     <string name="str_btn_EditRoutine_sequential_cycle_add">add tile</string>
+    <string name="str_btn_EditRoutine_sequential_organize_back">Back</string>
 </resources>
