--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -130,4 +130,5 @@
     <string name="str_btn_EditRoutine_sequential_routines_organize">organize routine</string>
     <string name="str_btn_EditRoutine_sequential_cycle_add">add tile</string>
     <string name="str_btn_EditRoutine_sequential_organize_back">Back</string>
+    <string name="str_tv_EditRoutine_continuous_routineName">Routine name</string>
 </resources>
