"finished" CountdownSettings.kt, improved constructors of Tile.kt. Also finished setting up SelectRunRoutineFragment.kt and renamed the old SelectRoutineFragment.kt to SelectEditRoutineFragment.kt because that's what it is.
was it worth it? i think so. could i have done this better? also yeah. will this do for now? yea

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -131,4 +131,6 @@
     <string name="str_btn_EditRoutine_sequential_cycle_add">add tile</string>
     <string name="str_btn_EditRoutine_sequential_organize_back">Back</string>
     <string name="str_tv_EditRoutine_continuous_routineName">Routine name</string>
+    <string name="str_btn_MainActivity_run">run routine!</string>
+    <string name="str_et_editContinuousRoutine_add">Add Tile!</string>
 </resources>
