redesigned SelectRoutineFragment.kt and combined SelectEditRoutineFragment.kt and SelectRunRoutineFragment.kt into SelectRoutineFragment.kt. Now you edit Routines by accessing the option in the context menu.
this code was written when i tried to listen to a speech and program simultaneously, but every time i crash, i have to take a shot. i've drunken the rest of the liqueur bottle i had, so if the code is borderline readable, i'm sorry

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="str_test">test-String!</string>
 
-    <string name="str_btn_MainActivity_setup">Set up Routine!</string>
+    <string name="str_btn_MainActivity_routines">View Routines!</string>
     <string name="str_button_MainActivity_test">test!</string>
     <string name="str_tv_MainActivity_username">Please log in!</string>
 
