started working on RunContinuousRoutineFragment.kt, got nothing done as always :) go me

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,4 +133,5 @@
     <string name="str_tv_EditRoutine_continuous_routineName">Routine name</string>
     <string name="str_btn_MainActivity_run">run routine!</string>
     <string name="str_et_editContinuousRoutine_add">Add Tile!</string>
+    <string name="str_tv_RunRoutine_continuous_routineName">Routine name</string>
 </resources>
