--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -134,4 +134,5 @@
     <string name="str_btn_MainActivity_run">run routine!</string>
     <string name="str_et_editContinuousRoutine_add">Add Tile!</string>
     <string name="str_tv_RunRoutine_continuous_routineName">Routine name</string>
+    <string name="str_tv_viewholder_runTile_currentTime">Current time:</string>
 </resources>
