--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">routineTimer</string>
+    <string name="app_name">RoutineTimer</string>
 
     <string name="str_test">test-String!</string>
 
